# cleverhans

./: .gitignore  CLAUDE.md
adversarial_asr/docker/: Dockerfile
adversarial_asr_modern/: .uvrc  ATTACK_EXPLANATION.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.gpu  FIX.md  GPU_DEPLOYMENT_GUIDE.md  GRID_SEARCH_USAGE.md  README.md  SETUP_GUIDE.md  UV_GUIDE.md  analyze_grid_results.py  attack_data.txt  check_gpu.py  check_librispeech_match.py  check_librispeech_match_fixed.py  convert_full_data.py  create_flac_data.py  debug_attack.py  debug_whisper.py  diagnose_attacks.py  diagnose_distortion.py  download_librispeech.sh  download_librispeech_transcripts.py  fix_ctc_attack.py  fix_cuda.sh  fix_uv_cuda.sh  force_cuda_install.sh  full_data_flac.txt  gpu_native.sh  gpu_optimized.sh  grid_search_lr.py  grid_search_test_10.txt  install_and_run_gpu.sh  install_pytorch_cuda.sh  install_uv.py  main.py  pyproject.toml  requirements-cuda.txt  requirements.txt  (+53 more)
adversarial_asr_modern/grid_search_results/: grid_search_summary_20250818_101738.csv  grid_search_summary_20250818_102016.csv  grid_search_summary_20250818_102811.csv  grid_search_summary_20250818_103817.csv  optimal_config.json  results_lr1_0_0001_lr2_0_001_bound_0_01.csv  results_lr1_0_0005_lr2_0_001_bound_0_005.csv  results_lr1_0_0005_lr2_0_001_bound_0_01.csv  results_lr1_0_001_lr2_0_001_bound_0_05.csv  results_lr1_0_001_lr2_0_001_bound_0_1.csv  results_lr1_0_001_lr2_0_001_bound_0_15.csv  results_lr1_0_005_lr2_0_001_bound_0_05.csv  results_lr1_0_005_lr2_0_001_bound_0_05_history.json  results_lr1_0_005_lr2_0_001_bound_0_1.csv  (+31 more)
(+66 files in other folders)
