[project]
name = "adversarial-asr-modern"
version = "0.1.0"
description = "Modernized adversarial audio attack targeting ASR systems using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "openai-whisper>=20230314",
    "matplotlib>=3.7.0",
    "absl-py>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adversarial_asr_modern"]
